style: use `number_with_delimiter` for numbers in mileage and long run goals and counts

--- a/app/views/shared/_user_current_streak_card.html.erb
+++ b/app/views/shared/_user_current_streak_card.html.erb
@@ -8,7 +8,7 @@
 <div class="card">
   <h2 class="mb-6 text-lg font-semibold text-light"><%= 'Your' if current_page?(root_path) %> Current Streak <%= "for #{team.name}" if team %></h2>
   <p class="text-3xl font-bold">
-    <%= streak %>
+    <%= number_with_delimiter streak %>
     <span class="text-base font-normal text-soft"><%= 'day'.pluralize(streak) %></span>
   </p>
   <div class="mt-2 mb-4">
