--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -12,7 +12,7 @@
 <div class="card mb-4">
   <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
     <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Team Season Dates</h2>
-    <%= link_to team_member_calendar_path(team, member), class: 'btn btn-sm btn-primary btn-muted gap-1.5' do %>
+    <%= link_to team_member_calendar_path(team, member), class: 'btn btn-sm btn-white btn-muted gap-1.5' do %>
       <%= inline_svg_tag 'icons/calendar.svg', class: 'size-3.5' %>
       <span>View calendar</span>
     <% end %>
