fix(flash): orphaned closing div tag when flash is updated

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'flash' do %>
+<div id="flash">
   <div
     data-controller="notifications"
     data-notifications-hidden-class="notification--hidden"
@@ -91,4 +91,4 @@
       </div>
     <% end %>
   </div>
-<% end %>
+</div>
