fix(sidebar): prevent new run button from shrinking

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -73,7 +73,7 @@
     <% end %>
 
     <!-- Open New Run Modal Button -->
-    <button data-action="mousedown->modal#open" data-modal-id="newRunModal" class="btn btn-primary mt-auto gap-2.5">
+    <button data-action="mousedown->modal#open" data-modal-id="newRunModal" class="btn btn-primary shrink-0 mt-auto gap-2.5">
       <%= inline_svg_tag 'icons/runner.svg', class: 'size-5' %>
       <span>New run</span>
     </button>
