--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -1,11 +1,21 @@
 <% size ||= :sm %>
+<% accent ||= :indigo %>
 
 <% size_classes = {
   sm: 'h-2 rounded-full',
   lg: 'h-4 rounded-sm',
 } %>
 
+<% size_class = size_classes[size] %>
+
 <% comparison_classes = (percentage - marker).positive? ? 'z-30 border-r-4 border-yellow-500 rounded-none dark:border-yellow-600' : 'z-10 bg-red-600/30' if local_assigns[:marker] %>
+
+<% accent_classes = {
+  indigo: 'from-violet-500 via-indigo-500 to-indigo-600',
+  orange: 'from-orange-400 to-orange-500 dark:from-orange-500 dark:to-orange-600',
+  blue: 'from-blue-400 to-blue-500 dark:from-blue-500 dark:to-blue-600',
+  yellow: 'from-yellow-400 to-yellow-500 dark:from-yellow-500 dark:to-yellow-600',
+} %>
 
 <div>
   <div class="flex items-end justify-between gap-4 my-1">
@@ -18,16 +28,16 @@
       <% end %>
     </div>
   </div>
-  <div class="<%= size_classes[size] %> w-full bg-slate-200 dark:bg-slate-700 relative not-dark:shadow-inner"
+  <div class="<%= size_class %> w-full bg-slate-200 dark:bg-slate-700 relative not-dark:shadow-inner"
        role="progressbar"
        aria-valuenow="<%= percentage %>"
        aria-valuemin="0"
        aria-valuemax="100"
        aria-label="<%= label %>"
     >
-    <div class="<%= size_classes[size] %> bg-linear-to-b from-violet-500 via-indigo-500 to-indigo-600 absolute left-0 top-0 z-20 max-w-full" style="width: <%= percentage %>%"></div>
+    <div class="<% size_class %> bg-linear-to-b <%= accent_classes[accent] %> absolute left-0 inset-y-0 z-20 max-w-full <%= size_class %>" style="width: <%= percentage %>%"></div>
     <% if local_assigns[:marker] && marker < 100 %>
-      <div class="<%= size_classes[size] + ' ' + comparison_classes %> absolute top-0 left-0 max-w-full" style="width: <%= marker %>%"></div>
+      <div class="<%= size_class + ' ' + comparison_classes %> absolute top-0 left-0 max-w-full" style="width: <%= marker %>%"></div>
     <% end %>
   </div>
 </div>
