--- a/app/views/teams/member/_streak_badge.html.erb
+++ b/app/views/teams/member/_streak_badge.html.erb
@@ -1,7 +1,7 @@
-<div class="whitespace-nowrap rounded-full pr-3 pl-2.5 py-1 text-xs font-semibold bg-indigo-200 dark:bg-indigo-900 relative overflow-hidden">
-  <div class="bg-linear-to-br from-violet-500 via-indigo-500 to-indigo-600 absolute left-0 top-0 z-10 max-w-full h-full" style="width: <%= percentage %>%"></div>
-  <div class="relative flex items-center gap-1.5 z-20 text-slate-50 dark:text-slate-200">
-    <%= inline_svg_tag 'icons/lightning-filled.svg', class: 'size-4 drop-shadow-[0_1px_1px_rgba(0,0,0,0.5)] dark:drop-shadow-none shrink-0' %>
-    <span class="font-bold drop-shadow-[0_1px_1px_rgba(0,0,0,0.5)] dark:drop-shadow-none"><%= pluralize(days, 'day') %></span>
+<div class="relative overflow-hidden rounded-full bg-orange-100 py-1 pr-2 pl-1.25 text-xs whitespace-nowrap text-orange-500 dark:bg-orange-700/20 dark:text-orange-400">
+  <div class="absolute top-0 right-0 z-10 h-full max-w-full backdrop-grayscale dark:backdrop-brightness-100" style="width: <%= 100 - percentage %>%"></div>
+  <div class="relative flex items-center gap-1">
+    <%= inline_svg_tag 'icons/lightning-filled.svg', class: 'size-4 shrink-0' %>
+    <span><%= pluralize(number_with_delimiter(days), 'day') %></span>
   </div>
 </div>
